--- a/pages/blog.html
+++ b/pages/blog.html
@@ -35,7 +35,7 @@ var _hmt = _hmt || [];
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="https://chaoxuprime.com/rss.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
   </head>
   <body>
     <header class="hide-on-print">
@@ -59,7 +59,7 @@ var _hmt = _hmt || [];
     </nav>
     <main>
       <article>
-        <h1 id="article-title">Posts</h1>
+        <h1 id="article-title">📝 Posts</h1>
         <table class="postindex">
 <tbody>
     
