--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -60,7 +60,7 @@ var _hmt = _hmt || [];
     </nav>
     <main>
       <article>
-        <h1 id="article-title">Vlog</h1>
+        <h1 id="article-title">📹 Vlog</h1>
         <table class="postindex">
 <tbody>
     
