--- a/vlog/vlog20.html
+++ b/vlog/vlog20.html
@@ -15,24 +15,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163975758-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-163975758-1');
-</script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163975758-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-163975758-1');
-</script>
-    
     
 <!-- 百度统计-->
     <script>
@@ -64,7 +46,7 @@ var _hmt = _hmt || [];
             <a href="/blog.html">The Art Gallery Guardian</a>
         </div>
         <div style="display: none;">
-          <img src="/files/chao/chao_thumb.jpg">
+          <img src="/files/wang/logo.jpg">
         </div>
     </header>
     <nav class="hide-on-print">
@@ -90,7 +72,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1gh47a3ugd8j323l0u0b2c.jpg" controls="controls">
-  <source src="https://sourl.cn/NyjvWv" type="video/mp4" />
+  <source src="https://tcs.teambition.net/storage/3322b118d70ce957f2a969ef832afd634776?Signature=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJBcHBJRCI6IjU5Mzc3MGZmODM5NjMyMDAyZTAzNThmMSIsIl9hcHBJZCI6IjU5Mzc3MGZmODM5NjMyMDAyZTAzNThmMSIsIl9vcmdhbml6YXRpb25JZCI6IiIsImV4cCI6MTYxMzM3Mzc5NywiaWF0IjoxNjEyNzY4OTk3LCJyZXNvdXJjZSI6Ii9zdG9yYWdlLzMzMjJiMTE4ZDcwY2U5NTdmMmE5NjllZjgzMmFmZDYzNDc3NiJ9.nC33-8gpsuoa0tPHKXLXwEAo5vwKmhZU45ReJeS7eCk&amp;download=004-The%20summer%20solstic.mp4" type="video/mp4" />
   </object>
 </video>
 	  </center>   
