--- a/blog.html
+++ b/blog.html
@@ -74,7 +74,8 @@ var _hmt = _hmt || [];
     class="video-js"
     controls
     preload="auto"
-    width="92%"
+   width="1920"
+    height="1080"
     
     poster="https://tva1.sinaimg.cn/large/0081Kckwgy1gkahr2in5bj31hc0u0gn0.jpg"
     data-setup="{}"
