--- a/blog.html
+++ b/blog.html
@@ -99,7 +99,7 @@ var _hmt = _hmt || [];
       <center>        
             
        <video
-              width="92%"
+              width="920"
     class="video-js"
     controls
     preload="auto"
