--- a/pages/blog.html
+++ b/pages/blog.html
@@ -20,7 +20,6 @@ var _hmt = _hmt || [];
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Art Gallery Guardian">
     <meta name="author" content="Rui Wang">
-    <meta name="google-site-verification" content="YE2oeW4OwVOPdVVfdpYIakOuD0A2Qo80W_sUbMJDGok">
     <meta property="og:title" content="Posts">
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
@@ -40,11 +39,9 @@ var _hmt = _hmt || [];
   <body>
     <header class="hide-on-print">
         <div id="site-title">
-            <a href="/blog.html">The Art Gallery Guardian</a>
+            <a href="/pages/blog.html">The Art Gallery Guardian</a>
         </div>
-        <div style="display: none;">
-          <img src="/files/wang/logo.png">
-        </div>
+     
     </header>
     <nav class="hide-on-print">
       <ul>
@@ -62,7 +59,11 @@ var _hmt = _hmt || [];
         <h1 id="article-title">📝 Posts</h1>
         <table class="postindex">
 <tbody>
-    
+
+<tr>
+    <td><a href="/posts/2020-02-11-Letter-to-Vivian.html"><cite>Letter to Vivian</cite></a></td>
+    <td class="right"><time>2021-02-11</time></td>
+</tr>  
  <tr>
     <td><a href="/posts/2020-09-09-DNA-sequencing"><cite>DNA-sequencing｜关于DNA测序</cite></a></td>
     <td class="right"><time>2020-09-09</time></td>
