--- a/pages/blog.html
+++ b/pages/blog.html
@@ -61,7 +61,7 @@ var _hmt = _hmt || [];
 <tbody>
 
 <tr>
-    <td><a href="/posts/2020-02-11-Letter-to-Vivian.html"><cite>Letter to Vivian</cite></a></td>
+    <td><a href="/posts/2020-02-11-Letter-to-Vivian.html"><cite>A Letter to Vivian</cite></a></td>
     <td class="right"><time>2021-02-11</time></td>
 </tr>  
  <tr>
