--- a/404.html
+++ b/404.html
@@ -68,9 +68,10 @@ var _hmt = _hmt || [];
            
         <h1>404</h1>
         <h2>UH OH! You're lost.</h2>
-        <p>⚠️The page you are looking for does not exist.
+        <p>  ⚠️The page you are looking for does not exist.
           How you got here is a mystery. But you can click the button below
           to go back to the homepage.
+		⚠️The page is not found.
         </p>
 		
 	      </center>
