--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Rui Wang</title>
+  <title>Ruiprime</title>
   <meta name="description" content="The personal webpage of Rui Wang.">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css" crossorigin="anonymous">
   <!-- Do not remove katex render. Index page is a idpage --> 
