--- a/pages/blog.html
+++ b/pages/blog.html
@@ -60,8 +60,14 @@ var _hmt = _hmt || [];
         <table class="postindex">
 <tbody>
 
+	
 <tr>
-    <td><a href="/posts/2020-02-11-Letter-to-Vivian.html"><cite>A Letter to Vivian</cite></a></td>
+    <td><a href="/posts/2021-02-18-Hexo-Github.html"><cite>年轻人的第一个网站｜hexo详细搭建教程</cite></a></td>
+    <td class="right"><time>2021-02-11</time></td>
+</tr>  
+	
+<tr>
+    <td><a href="/posts/2021-02-11-Letter-to-Vivian.html"><cite>A Letter to Vivian</cite></a></td>
     <td class="right"><time>2021-02-11</time></td>
 </tr>  
  <tr>
