--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -18,7 +18,6 @@ var _hmt = _hmt || [];
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Art Gallery Guardian">
     <meta name="author" content="Rui Wang">
-    <meta name="google-site-verification" content="YE2oeW4OwVOPdVVfdpYIakOuD0A2Qo80W_sUbMJDGok">
     <meta property="og:title" content="Vlog">
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
@@ -64,11 +63,18 @@ var _hmt = _hmt || [];
         <table class="postindex">
 <tbody>
     
+	
+	
  <tr>
     <td><a href="https://sourl.cn/nUB6BK"><cite>Wechat History</cite></a></td>
     <td class="right"><time>2016-07-01</time></td>
 </tr>
 
+<tr>
+    <td><a href="https://baklibcdn.dagle.cn/t/7fae6395-6983-4ab8-8b87-d9d220ca8f0c/u/20ddcf34-1454-4b5e-8e13-a813f0bae50c/USA-cut1613828828098.mp4"><cite>life photo | usa</cite></a></td>
+    <td class="right"><time>2021-02-20</time></td>
+</tr>
+	
 <tr>
     <td><a href="/vlog/2021-01-13-my2020.html"><cite>My Year 2020</cite></a></td>
     <td class="right"><time>2021-01-14</time></td>
