--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -71,7 +71,7 @@ var _hmt = _hmt || [];
 </tr>
 
 <tr>
-    <td><a href="https://baklibcdn.dagle.cn/t/7fae6395-6983-4ab8-8b87-d9d220ca8f0c/u/20ddcf34-1454-4b5e-8e13-a813f0bae50c/USA-cut1613828828098.mp4"><cite>life photo | usa</cite></a></td>
+    <td><a href="/vlog/2021-02-20-life-photo-usa.html"><cite>life photo | usa</cite></a></td>
     <td class="right"><time>2021-02-20</time></td>
 </tr>
 	
