--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 
 	
 	
-
-	
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e413e3537a7748d48eceeb5dd9a2405f", "spa": true}'></script>
+<!-- End Cloudflare Web Analytics -->	
 	
 
 	
