--- a/404.html
+++ b/404.html
@@ -62,9 +62,7 @@ var _hmt = _hmt || [];
 	  
 	  
         <center>
-            <img src="https://tva1.sinaimg.cn/large/008eGmZEgy1gmwfjsp7dxg30m80go0zu.gif" alt="404.gif" title="404.gif" />
-              <img src="https://cdn.jsdelivr.net/gh/ruiprime/ruiprime.github.io@master/images/00%20(1).jpg" alt="404.gif" title="404.gif" /> 
-              
+          <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=YLp4IUx9A1qIAF1ruaDVjg8B_Yh6iQ3XwNZoiaYTAGo&cl=ffffff&w=a"></script>
            
         <h1>404</h1>
         <h2>UH OH! You're lost.</h2>
