--- a/404.html
+++ b/404.html
@@ -62,7 +62,7 @@ var _hmt = _hmt || [];
 	  
 	  
         <center>
-         <script src="//clustrmaps.com/globe.js?d=YLp4IUx9A1qIAF1ruaDVjg8B_Yh6iQ3XwNZoiaYTAGo"></script>
+         <script type="text/javascript" id="clstr_globe" within=100% src="//clustrmaps.com/globe.js?d=YLp4IUx9A1qIAF1ruaDVjg8B_Yh6iQ3XwNZoiaYTAGo"></script>
         <h1>404</h1>
         <h2>UH OH! You're lost.</h2>
         <p>  ⚠️The page you are looking for does not exist.
