--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -44,10 +44,11 @@ var _hmt = _hmt || [];
     <nav class="hide-on-print">
       <ul>
         <li><a href="/">About</a></li>
-        <li><a href="/blog.html">Blog</a></li>
-	<li><a href="/posts/vlog.html">Vlog</a></li>
+        <li><a href="/pages/blog.html">Blog</a></li>
+	<li><a href="/pages/vlog.html">Vlog</a></li>
         <li><a href="/files/cv.pdf">CV</a></li>
-        <li><a href="/tools.html">Tools</a></li>
+        <li><a href="/pages/tools.html">Tools</a></li>
+        <li><a href="/pages/film.html">Film</a></li>
         <li><a href="/pages/24fps.html">24 FPS</a></li>
       </ul>
     </nav>
