--- a/pages/blog.html
+++ b/pages/blog.html
@@ -60,6 +60,10 @@ var _hmt = _hmt || [];
         <table class="postindex">
 <tbody>
 
+<tr>
+    <td><a href="/posts/2021-03-09-prism.html"><cite>GraphPad Prism 部分教程</cite></a></td>
+    <td class="right"><time>2021-03-09</time></td>
+</tr>  
 	
 <tr>
     <td><a href="/posts/2021-02-18-Hexo-Github.html"><cite>年轻人的第一个网站｜hexo详细搭建教程</cite></a></td>
