--- a/pages/blog.html
+++ b/pages/blog.html
@@ -59,7 +59,10 @@ var _hmt = _hmt || [];
         <h1 id="article-title">📝 Posts</h1>
         <table class="postindex">
 <tbody>
-
+<tr>
+    <td><a href="/posts/2021-03-09-originlab.html"><cite>OriginLab 2021</cite></a></td>
+    <td class="right"><time>2021-03-09</time></td>
+</tr> 
 <tr>
     <td><a href="/posts/2021-03-09-prism.html"><cite>GraphPad Prism 部分教程</cite></a></td>
     <td class="right"><time>2021-03-09</time></td>
