--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -64,10 +64,14 @@ var _hmt = _hmt || [];
 <tbody>
     
 	
-	
  <tr>
     <td><a href="https://sourl.cn/nUB6BK"><cite>Wechat History</cite></a></td>
     <td class="right"><time>2016-07-01</time></td>
+</tr>
+	
+ <tr>
+    <td><a href="/vlog/2021-03-10-suzhou-zoo.html"><cite>life film|Suzhou-ZOO</cite></a></td>
+    <td class="right"><time>2021-03-10</time></td>
 </tr>
 
 <tr>
