--- a/README.html
+++ b/README.html
@@ -44,7 +44,7 @@
         <h1 id="article-title">README</h1>
         <h1 id="technology"><span class="header-section-number">1</span> Technology</h1>
 <ol type="1">
-<li>The source of the blog is on a <a href="https://github.com/chaoxu/chaoxu.github.io/tree/develop">git repository</a>.</li>
+<li>The source of the blog is on a <a href="https://github.com/biowr/biowr.github.io">git repository</a>.</li>
 <li>html files are hosted on <a href="https://pages.github.com">GitHub Pages</a>.</li>
 <li>The blog source is compiled by <a href="http://jaspervdj.be/hakyll/">hakyll</a>.</li>
 <li>The content is written use my variation of <a href="http://johnmacfarlane.net/pandoc/README.html#pandocs-markdown">Pandoc’s Markdown</a>, I call it <a href="https://github.com/chaoxu/blog/blob/master/MathDoc.hs">Xu’s MathDoc</a>.</li>
