--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   
   
 <head>
+	
+	 
+<!-- 谷歌ad-->
+<script data-ad-client="ca-pub-1293855853975663" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Ruiprime</title>
@@ -72,6 +77,8 @@ var _hmt = _hmt || [];
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/homepage.css?v=20190803" crossorigin="anonymous">
 </head>
+	
+	
 <body>
 <div class="container">
 <div class="person" itemscope="" itemtype="http://schema.org/Person">
