--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ var _hmt = _hmt || [];
   <div class="intro-left" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
     <meta itemprop="representativeOfPage" content="True">
     <!-- 首页头像 -->
-    <img width="220" height="220" src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pic/my.png" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
+    <img width="220" height="220" src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210314225920.jpg" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
   </div>
   <div class="intro-right">
     
