--- a/pages/tools.html
+++ b/pages/tools.html
@@ -100,6 +100,7 @@ var _hmt = _hmt || [];
 	
 
 <p> </p>
+<p><a href='https://sourl.cn/mjLBp6' target="_blank" >R</a> </p>
 <p> <a href='https://sourl.cn/egiiGi' target="_blank" >Adobe</a></p>	
 <p>Adobe Acrobat DC 2019 <a href='https://sourl.cn/4vci9Q' target="_blank" >Win</a> <a href='https://sourl.cn/N6qNgh' target="_blank" >Mac</a> </p>
 <p>Adobe Photoshop 2021 SP <a href='https://sourl.cn/4mKPj5'target="_blank" >Win</a> <a href='https://sourl.cn/p4fHhb' target="_blank" >Mac</a> </p>
