--- a/pages/tools.html
+++ b/pages/tools.html
@@ -79,10 +79,10 @@ var _hmt = _hmt || [];
 	
 <p><a href='https://sourl.cn/VvrRDf' target="_blank" >Internet Download Manager</a> </p>
 	
-<p><a href='https://freefilesync.org/' target="_blank" >FreeFileSync</a>  <a href='https://rickywang.lanzous.com/ibr5usb' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr5v0j' target="_blank" >Mac</a></p>
 
 <h3>Research software</h3>
 	<p> </p>
+<p><a href='https://sourl.cn/URF5kx' target="_blank" >PDF-XChange-Editor9.0.3</a> </p>
 <p><a href='https://github.com/leovan/SciHubEVA/releases' target="_blank" >ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr6kcb' target="_blank" >Mac</a></p>
 <p><a href='http://www.eudic.net/v4/en/app/eudic/' target="_blank" >Eudic</a> </p>
 <p> <a href='http://pre.las.ac.cn/endnote/endnote.jsp' target="_blank" >Endnote (NSL) </a> ｜  X9.3.2 <a href='https://rickywang.lanzous.com/imN2smb8r8b' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e' target="_blank" >Mac</a>  // 2020 <a href='https://rickywang.lanzous.com/iAv0Mkeshrg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/iIzqLkesh9i' target="_blank" >Mac</a></p>
