--- a/pages/tools.html
+++ b/pages/tools.html
@@ -80,6 +80,7 @@ var _hmt = _hmt || [];
 
 <h3>Research software</h3>
 	<p> </p>
+<p><a href='https://sourl.cn/NVNP6T' target="_blank" >Deepl-translator</a> </p>
 <p><a href='https://sourl.cn/URF5kx' target="_blank" >PDF-XChange-Editor9.0.3</a> </p>
 <p><a href='https://github.com/leovan/SciHubEVA/releases' target="_blank" >ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr6kcb' target="_blank" >Mac</a></p>
 <p><a href='http://www.eudic.net/v4/en/app/eudic/' target="_blank" >Eudic</a> </p>
