--- a/pages/blog.html
+++ b/pages/blog.html
@@ -60,7 +60,7 @@ var _hmt = _hmt || [];
         <table class="postindex">
 <tbody>
 <tr>
-    <td><a href="/pages/note.html"><cite>Learn more about me and my blog</cite></a></td>
+    <td><a href="/pages/notebook.html"><cite>Learn more about me and my blog</cite></a></td>
     <td class="right"><time>2021-03-09</time></td>
 </tr> 	
 	
