--- a/pages/notebook.html
+++ b/pages/notebook.html
@@ -24,7 +24,7 @@ var _hmt = _hmt || [];
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
     <meta property="article:tag" content="">
-    <title>Posts</title>
+    <title>Notebook</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 
@@ -56,7 +56,7 @@ var _hmt = _hmt || [];
     </nav>
     <main>
       <article>
-        <h1 id="article-title">📝 Posts</h1>
+        <h1 id="article-title">📖NOTEBOOK</h1>
         <table class="postindex">
 <tbody>
 
