--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ var _hmt = _hmt || [];
   <div class="intro-left" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
     <meta itemprop="representativeOfPage" content="True">
     <!-- 首页头像 -->
-    <video width="230" height="230" src="https://baklibcdn.dagle.cn/t/faf8de41-c4a1-4d7e-8df3-5ffc764a9323/u/20ddcf34-1454-4b5e-8e13-a813f0bae50c/026-zoo-zipped1615471158860.mp4" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
+    <video width="230" height="230" src="https://baklibcdn.dagle.cn/t/faf8de41-c4a1-4d7e-8df3-5ffc764a9323/u/20ddcf34-1454-4b5e-8e13-a813f0bae50c/026-zoo-zipped1615471158860.mp4" controls="controls" type="video/mp4" itemprop="contentUrl"/>
   </div>
   <div class="intro-right">
     
