--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ var _hmt = _hmt || [];
   <div class="intro-left" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
     <meta itemprop="representativeOfPage" content="True">
     <!-- 首页头像 -->
-    <video width="220" height="220" poster="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210320135336.gif" src="https://baklibcdn.dagle.cn/t/c6e48c5a-4d65-4ed3-ab54-8d6bd6fb7a63/u/20ddcf34-1454-4b5e-8e13-a813f0bae50c/020-Summer%20in%20August1614662739955.mp4" style="border-radius:50%;max-width:80%" controls="controls" type="video/mp4" itemprop="contentUrl"/>
-  </div>
+   <img width="220" height="220" src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210320135336.gif" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl">
+	</div>
   <div class="intro-right">
     
     
