--- a/pages/tools.html
+++ b/pages/tools.html
@@ -66,16 +66,16 @@ var _hmt = _hmt || [];
 	<p> </p>
 	
 <p><a href='https://www.google.cn/chrome/' target="_blank" >Google Chrome</a></p>
-	<p><a href='https://www.microsoft.com/zh-cn/edge/' target="_blank" >Microsoft Edge</a></p>
+<p><a href='https://www.microsoft.com/zh-cn/edge/' target="_blank" >Microsoft Edge</a></p>
 <p><a href='https://office.qq.com/' target="_blank" >TIM</a></p>
 	
 <p><a href='https://rickywang.lanzous.com/ibr0uud' target="_blank" >Office 2019</a> <a href='https://rickywang.lanzous.com/ibsvzvg' target="_blank" >2016</a></p> 
 	
 <p><a href='https://www.teamviewer.cn/cn/' target="_blank" >Teamviewer</a> <a href='https://rickywang.lanzous.com/ibsjpud' target="_blank" >Lite</a></p>
 
-<p><a href='https://rickywang.lanzous.com/ibr5j9g' target="_blank" >7-Zip</a> </p>
+<p><a href='https://www.7-zip.org/' target="_blank" >7-Zip</a> </p>
 	
-<p><a href='https://sourl.cn/VvrRDf' target="_blank" >Internet Download Manager</a> </p>
+<p><a href='https://sourl.cn/nUGiFy' target="_blank" >Internet Download Manager</a> </p>
 	
 
 <h3>Research software</h3>
@@ -106,8 +106,7 @@ var _hmt = _hmt || [];
 <p>Adobe Photoshop 2021 SP <a href='https://sourl.cn/4mKPj5'target="_blank" >Win</a> <a href='https://sourl.cn/p4fHhb' target="_blank" >Mac</a> </p>
 <p>Adobe Illustrator 2020 SP <a href='https://sourl.cn/U8C4pW'>Win</a> <a href='https://onedrive.gimhoy.com/sharepoint/aHR0cHM6Ly91c3RzLW15LnNoYXJlcG9pbnQuY24vOnU6L2cvcGVyc29uYWwvMjY0M191c3RzX2VkdV9jbi9FWktFTENJWFE3RkduUllKVURvaHgyTUJhOTVtbFNNRUFHUzZlNDhMYTVGOTVBP2U9RlVKUXlW.zip' target="_blank" >Mac</a> </p>
 <p>Adobe Premiere 2021 SP <a href='https://sourl.cn/i8VDKw'target="_blank" >Win</a> <a href='/tools'>Mac</a> </p>
-<p>Pixelmator Pro 1.7 <a href='https://sourl.cn/WjMfuG' target="_blank" >Mac</a> </p>
-	
+<p>Pixelmator Pro 1.7 <a href='https://sourl.cn/47FvVm' target="_blank" >Mac</a> </p>	
 <p><a href='https://rickywang.lanzous.com/ibrb79a' target="_blank" >amtemu.v0.9.2-painter</a></p>
 	
 <h3>OpenWRT</h3>
