--- a/pages/tools.html
+++ b/pages/tools.html
@@ -125,7 +125,7 @@ var _hmt = _hmt || [];
 	
  
 	
-	<h1>Password ：<a href='https://tva1.sinaimg.cn/large/008eGmZEgy1gmzy1fz1qtj30j40t044g.jpg'   target="_blank" color="red" >click me</a></h1>
+	<h1>⚙️Password ：<a href='https://tva1.sinaimg.cn/large/008eGmZEgy1gmzy1fz1qtj30j40t044g.jpg'   target="_blank"  >👋click me </a></h1>
 <p> </p>  
 	
 	
