--- a/pages/tools.html
+++ b/pages/tools.html
@@ -80,6 +80,7 @@ var _hmt = _hmt || [];
 
 <h3>Research software</h3>
 	<p> </p>
+<p><a href='https://sourl.cn/dN7Dd7' target="_blank" >Xmind ZEN</a> </p>
 <p><a href='https://sourl.cn/NVNP6T' target="_blank" >Deepl-translator</a> </p>
 <p><a href='https://sourl.cn/574Kzh' target="_blank" >MEGA X</a> </p>
 <p><a href='https://sourl.cn/URF5kx' target="_blank" >PDF-XChange-Editor9.0.3</a> </p>
