--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html><html lang="en">
+<!-- 密码-->	
+<script language="JavaScript"><!--var password="";password=prompt('请输入密码 (本网站需输入密码才可进入):','');if (password != '9527')   {alert("密码不正确,无法进入本站!!");    window.opener=null; window.close();}  // 密码不正确就关闭//--></script>	
 	
-	 
+	
+	
 <!-- 百度统计-->
     <script>
 var _hmt = _hmt || [];
