--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@ var _hmt = _hmt || [];
 })();
 </script>
 	
-	<head>
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Art Gallery Guardian">
@@ -27,14 +27,21 @@ var _hmt = _hmt || [];
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
  
 <!-- 密码-->	
-<script language="JavaScript"><!--var password="";password=prompt('请输入密码 (本网站需输入密码才可进入):','');if (password != '9527')   {alert("密码不正确,无法进入本站!!");    window.opener=null; window.close();}  // 密码不正确就关闭//--></script>	
+<script language="JavaScript">
+<!--var password="";password=prompt('请输入密码 (本网站需输入密码才可进入):','');
+	if (password != '9527')   
+	{alert("密码不正确,无法进入本站!!");    
+	 window.opener=null; window.close();}  // 密码不正确就关闭//
+-->
+		
+</script>	
 	
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
   <link rel="alternate" type="application/rss+xml" title="RSS" href="https://biowr.github.io/rss.xml">
-  </head>
+</head>
   <body>
     <header class="hide-on-print">
         <div id="site-title">
