--- a/blog.html
+++ b/blog.html
@@ -28,11 +28,12 @@ var _hmt = _hmt || [];
  
 <!-- 密码-->	
 <script language="JavaScript">
-<!--var password="";password=prompt('请输入密码 (本网站需输入密码才可进入):','');
-	if (password != '9527')   
+<!--
+var password="";password=prompt('请输入密码 (本网站需输入密码才可进入):','');
+	if (password != 'mima')   
 	{alert("密码不正确,无法进入本站!!");    
-	 window.opener=null; window.close();}  // 密码不正确就关闭//
--->
+	 window.opener=null; window.close();}  // 密码不正确就关闭
+//-->
 		
 </script>	
 	
