--- a/blog.html
+++ b/blog.html
@@ -26,12 +26,12 @@ var _hmt = _hmt || [];
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
  
-<!-- 密码-->	
+<!--pass-->	
 <script language="JavaScript">
 <!--
-var password="";password=prompt('请输入密码 (本网站需输入密码才可进入):','');
-	if (password != 'mima')   
-	{alert("密码不正确,无法进入本站!!");    
+var password="";password=prompt('Follow my WeChat Official Accounts [is-wzjy] Reply[pwd]','');
+	if (password != '9527')   
+	{alert("The password is incorrect, goodbye👋");    
 	 window.opener=null; window.close();}  // 密码不正确就关闭
 //-->
 		
