--- a/blog.html
+++ b/blog.html
@@ -29,8 +29,8 @@ var _hmt = _hmt || [];
 <!--pass-->	
 <script language="JavaScript">
 <!--
-var password="";password=prompt('Follow my WeChat Official Accounts [is-wzjy] Reply[pwd]','');
-	if (password != '9527')   
+var password="";password=prompt('You can follow my WeChat Public Accounts 【is-wzjy】,Reply【pwd】','');
+	if (password != '9757')   
 	{alert("The password is incorrect, goodbye👋");    
 	 window.opener=null; window.close();}  // 密码不正确就关闭
 //-->
