--- a/pages/tools.html
+++ b/pages/tools.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en">
+	
+	<head>
+    
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Art Gallery Guardian">
@@ -25,7 +28,17 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-
+		
+<!--pass-->	
+<script language="JavaScript">
+<!--
+var password="";password=prompt('🚀You can follow my WeChat Public Accounts 【is-wzjy】,Reply【pwd】','');
+	if (password != '9757')   
+	{alert("⚠️Sorry，the password is incorrect, goodbye👋");    
+	 window.opener=null; window.close();}  // 密码不正确就关闭
+//-->
+		
+</script>
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
