--- a/pages/tools.html
+++ b/pages/tools.html
@@ -61,21 +61,25 @@ var _hmt = _hmt || [];
         <article>
         <h1 id="article-title">🔧 Tools</h1>
 <p> </p>  
-		<p> </p>  
-		<p> </p>  
-		<p> </p>  
-		<p> </p> 
-		<p> </p>  
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 	<center> <strong><em>Enter Password</em></strong> </center>
  
 		<center> <strong><em>Follow the WeChat public account "is-wzja" and reply "pwd" to get the password</em></strong> </center>
-	<center><img width=35% src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210309223955.png" referrerpolicy="no-referrer"></center>
+	<center><img width=35% src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/weichat.JPG" referrerpolicy="no-referrer"></center>
 		
-		<p> </p> 
-		<p> </p>  
-		<p> </p>  
-		<p> </p>  
-		<p> </p>  
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 	<h1>⚙️Password ：<a href='https://tva1.sinaimg.cn/large/008eGmZEgy1gmzy1fz1qtj30j40t044g.jpg'   target="_blank"  >👋click me </a></h1>
 <p> </p>  
 	
