--- a/pages/tools.html
+++ b/pages/tools.html
@@ -69,8 +69,9 @@ var _hmt = _hmt || [];
 		<br>
 		<br>
 	<center> <strong><em>Enter Password</em></strong> </center>
- 
-		<center> <strong><em>Follow the WeChat public account "is-wzja" and reply "pwd" to get the password</em></strong> </center>
+                <br>
+		<br>
+		<center> <strong><em>Follow the WeChat public account "is-wzja" and reply "pwd" to get the password.</em></strong> </center>
 	<center><img width=35% src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/weichat.JPG" referrerpolicy="no-referrer"></center>
 		
 		<br>
@@ -80,7 +81,7 @@ var _hmt = _hmt || [];
 		<br>
 		<br>
 		<br>
-	<h1>⚙️Password ：<a href='https://tva1.sinaimg.cn/large/008eGmZEgy1gmzy1fz1qtj30j40t044g.jpg'   target="_blank"  >👋click me </a></h1>
+	<center> <strong><em>Tools Download ：<a href='/pages/tools-back.html'   target="_blank"  >👋click me </a></em></strong> </center>
 <p> </p>  
 	
 	
