--- a/pages/tools.html
+++ b/pages/tools.html
@@ -71,7 +71,7 @@ var _hmt = _hmt || [];
 	<center> <strong><em>Enter Password</em></strong> </center>
                 <br>
 		<br>
-		<center> <strong><em>Follow the WeChat public account "is-wzja" and reply "pwd" to get the password.</em></strong> </center>
+		<center> <strong><em>Follow the WeChat public account 'is-wzja' and reply 'pwd' to get the password.</em></strong> </center>
 	<center><img width=42% src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/weichat.JPG" referrerpolicy="no-referrer"></center>
 		
 		<br>
