--- a/pages/tools.html
+++ b/pages/tools.html
@@ -33,7 +33,7 @@ var _hmt = _hmt || [];
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="https://chaoxuprime.com/rss.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="https://biowr.github.io/atom.xml">
 <!--订阅-->
   </head>
   <body>
@@ -71,7 +71,7 @@ var _hmt = _hmt || [];
 	<center> <strong><em>Enter Password</em></strong> </center>
                 <br>
 		<br>
-		<center> <strong><em>Follow the WeChat public account 'is-wzja' and reply 'pwd' to get the password.</em></strong> </center>
+		<center> <strong><em>Follow the WeChat public account ‘is-wzja’ and reply ‘pwd’ to get the password.</em></strong> </center>
 	<center><img width=42% src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/weichat.JPG" referrerpolicy="no-referrer"></center>
 		
 		<br>
