--- a/pages/tool.html
+++ b/pages/tool.html
@@ -101,7 +101,7 @@ var _hmt = _hmt || [];
 	
 <p><a href='https://github.com/CJ-Chen/TBtools' target="_blank" >TBtools</a>  <a href='https://sourl.cn/vbxLjE' target="_blank" > Win</a>  <a href='https://sourl.cn/6YyVhT' target="_blank" >Mac</a></p>
 
-<p><a href='https://onedrive.gimhoy.com/sharepoint/aHR0cHM6Ly91c3RzLW15LnNoYXJlcG9pbnQuY24vOnU6L2cvcGVyc29uYWwvMjY0M191c3RzX2VkdV9jbi9FVW92R3dwRE5laExoNlJSdVB3bWNBMEIzX0RzUTR3Sk1pMEZiZEM3NGNnTTZRP2U9c3lZcW1M.zip' target="_blank" >SPSS 25 </a> </p>
+<p><a href='https://sourl.cn/3AzcHw' target="_blank" >SPSS</a> </p>
 	
 <h3>Professional software</h3>
 	
