--- a/pages/blog.html
+++ b/pages/blog.html
@@ -66,6 +66,11 @@ var _hmt = _hmt || [];
 </tr> 	
 	
 <tr>
+    <td><a href="/pages/bioinfo/notelist.html"><cite>Bioinformatics Notes</cite></a></td>
+    <td class="right"><time>2021-04-03</time></td>
+</tr> 
+	
+<tr>
     <td><a href="/posts/2021-03-09-OriginLab.html"><cite>OriginLab 2021</cite></a></td>
     <td class="right"><time>2021-03-09</time></td>
 </tr> 
