--- a/pages/tools.html
+++ b/pages/tools.html
@@ -67,7 +67,7 @@ var _hmt = _hmt || [];
 		
 		<br>
 		<br>
-	<center> <strong><em>Enter Password</em></strong> </center>
+	<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >Enter Password</a></em></strong> </center>
                 <br>
 		<br>
 		<center> <strong><em>Follow the WeChat public account ‘is-wzja’ and reply ‘pwd’ to get the password.</em></strong> </center>
