--- a/pages/tools.html
+++ b/pages/tools.html
@@ -77,7 +77,20 @@ var _hmt = _hmt || [];
 		
 	<center> <strong><em>Tools Download ：<a href='/pages/tools-back.html'   target="_blank"  >👋click me </a></em></strong> </center>
 <p> </p>  
-	
+	<!--只有字的ad-->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+		
+		
 	<br>
 		<br>
 	
