--- a/pages/tool.html
+++ b/pages/tool.html
@@ -83,6 +83,18 @@ var _hmt = _hmt || [];
 <p><a href='https://www.7-zip.org/' target="_blank" >7-Zip</a> </p>
 	
 <p><a href='https://sourl.cn/nUGiFy' target="_blank" >Internet Download Manager</a> </p>
+<!--只有字的ad-->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+	
 	
 
 <h3>Research software</h3>
@@ -103,6 +115,21 @@ var _hmt = _hmt || [];
 
 <p><a href='https://sourl.cn/3AzcHw' target="_blank" >SPSS</a> </p>
 	
+<!--只有字的ad-->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+	
+	
+	
 <h3>Professional software</h3>
 	
 	
@@ -116,12 +143,26 @@ var _hmt = _hmt || [];
 <p>Adobe Premiere 2021 SP <a href='https://sourl.cn/i8VDKw'target="_blank" >Win</a> <a href='/tools'>Mac</a> </p>
 <p>Pixelmator Pro 1.7 <a href='https://sourl.cn/47FvVm' target="_blank" >Mac</a> </p>	
 <p><a href='https://rickywang.lanzous.com/ibrb79a' target="_blank" >amtemu.v0.9.2-painter</a></p>
+<!--只有字的ad-->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+	
 	
 <h3>OpenWRT</h3>
 	
 	 <p> </p>
 <p><a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >Rpi 4B</a>  <a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >Lite</a>  <a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >With Docker</a></p>
 
+	
+	
 	<h3>VPN</h3>
 	  <p> </p>
 
@@ -129,14 +170,34 @@ var _hmt = _hmt || [];
 <p><a href='https://rsoftware.baklib-free.com/Software/811e' target="_blank" >Qv2ray</a></p>	
 	<p> </p>  
 	
-	
+<!--只有字的ad-->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>	
 	
  
 	
 	<h1>⚙️Password ：<a href='https://tva1.sinaimg.cn/large/008eGmZEgy1gmzy1fz1qtj30j40t044g.jpg'   target="_blank"  >👋click me </a></h1>
 <p> </p>  
 	
-	
+	<!--只有字的ad-->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	
 	
       </article>
