--- a/pages/tool.html
+++ b/pages/tool.html
@@ -31,7 +31,15 @@ var _hmt = _hmt || [];
 })();
 </script>
 		
-
+<!--pass-->	
+<script language="JavaScript">
+<!--
+var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" and reply "pwd" to get the password.','');
+	if (password != '9757')   
+	{alert("❌Sorry，the password is incorrect, bye～👋");    
+	 window.opener=null; window.close();}  // 密码不正确就关闭
+//-->
+		
 </script>
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
