--- a/pages/tools.html
+++ b/pages/tools.html
@@ -61,13 +61,20 @@ var _hmt = _hmt || [];
         <article>
         <h1 id="article-title">🔧 Tools</h1>
 <p> </p>  
+<!--只有字的ad-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		<br>
 		<br>
-		<br>
-		
-		<br>
-		<br>
-	<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >Enter Password</a></em></strong> </center>
+	<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >🔑Enter Password</a></em></strong> </center>
                 <br>
 		<br>
 		<center> <strong><em>Follow the WeChat public account ‘is-wzja’ and reply ‘pwd’ to get the password.</em></strong> </center>
@@ -75,7 +82,7 @@ var _hmt = _hmt || [];
 		
 		<br>
 		
-	<center> <strong><em>Tools Download ：<a href='/pages/tools-back.html'   target="_blank"  >👋click me </a></em></strong> </center>
+	<center> <strong><em>📥Tools Download ：<a href='/pages/tools-back.html'   target="_blank"  >👋click me </a></em></strong> </center>
 <p> </p>  
 	<!--只有字的ad-->
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
