--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -72,8 +72,12 @@ var _hmt = _hmt || [];
     <td class="right"><time>2016-07-01</time></td>
 </tr>
 <tr>
+    <td><a href="/vlog/2021-04-04-LAB.html"><cite>life film|Spring LAB</cite></a></td>
+    <td class="right"><time>2021-04-04</time></td>
+</tr>
+<tr>
     <td><a href="/vlog/2021-03-27-lifefilm-spring.html"><cite>life film|Spring 2021</cite></a></td>
-    <td class="right"><time>2021-03-10</time></td>
+    <td class="right"><time>2021-03-30</time></td>
 </tr>
 	
  <tr>
