--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -111,7 +111,8 @@ var _hmt = _hmt || [];
 <p>Adobe Photoshop 2021 SP <a href='https://sourl.cn/4mKPj5'target="_blank" >Win</a> <a href='https://sourl.cn/p4fHhb' target="_blank" >Mac</a> </p>
 <p>Adobe Illustrator 2020 SP <a href='https://sourl.cn/U8C4pW'>Win</a> <a href='https://onedrive.gimhoy.com/sharepoint/aHR0cHM6Ly91c3RzLW15LnNoYXJlcG9pbnQuY24vOnU6L2cvcGVyc29uYWwvMjY0M191c3RzX2VkdV9jbi9FWktFTENJWFE3RkduUllKVURvaHgyTUJhOTVtbFNNRUFHUzZlNDhMYTVGOTVBP2U9RlVKUXlW.zip' target="_blank" >Mac</a> </p>
 <p>Adobe Premiere 2021 SP <a href='https://sourl.cn/i8VDKw'target="_blank" >Win</a> <a href='/tools'>Mac</a> </p>
-<p>Pixelmator Pro 1.7 <a href='https://sourl.cn/47FvVm' target="_blank" >Mac</a> </p>	
+<p>Pixelmator Pro 1.7 <a href='https://sourl.cn/47FvVm' target="_blank" >Mac</a> </p>
+<p>PDF Expert <a href='https://sourl.cn/5qafE4' target="_blank" >Mac</a> </p>	
 <p><a href='https://rickywang.lanzous.com/ibrb79a' target="_blank" >amtemu.v0.9.2-painter</a></p>
 	
 <h3>OpenWRT</h3>
