--- a/pages/blog.html
+++ b/pages/blog.html
@@ -58,6 +58,7 @@ var _hmt = _hmt || [];
         <h1 id="article-title">📝 Posts</h1>
         <table class="postindex">
 <tbody>
+	
 <tr>
     <td><a href="/pages/notebook.html"><cite>Learn more about me and my blog</cite></a></td>
     <td class="right"><time>2021-03-09</time></td>
@@ -68,6 +69,10 @@ var _hmt = _hmt || [];
     <td class="right"><time>2021-04-03</time></td>
 </tr> 
 	
+<tr>
+    <td><a href="/posts/2021-04-09-paper-writing.html"><cite>Improve the quality of graduation paper</cite></a></td>
+    <td class="right"><time>2021-04-09</time></td>
+</tr> 
 <tr>
     <td><a href="/posts/2021-03-09-OriginLab.html"><cite>OriginLab 2021</cite></a></td>
     <td class="right"><time>2021-03-09</time></td>
