--- a/pages/tools.html
+++ b/pages/tools.html
@@ -74,14 +74,17 @@ var _hmt = _hmt || [];
 </script>
 		<br>
 		<br>
+		<center><p> ⬇️⬇️⬇️</p>  </center>
 	<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >🔑Enter Password</a></em></strong> </center>
+		
+		<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >点击下载</a></em></strong> </center>
                 <br>
 		<br>
 		<center> <strong><em>Follow the WeChat public account ‘is-wzja’ and reply ‘pwd’ to get the password.</em></strong> </center>
 	<center><img width=50% src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210327151308.jpg" referrerpolicy="no-referrer"></center>
 		
 		<br>
-		
+		<center><p> ⬇️⬇️⬇️</p>  </center>
 	<center> <strong><em>📥Tools Download ：<a href='/pages/tools-back.html'   target="_blank"  >👋click me </a></em></strong> </center>
 <p> </p>  
 	<!--只有字的ad-->
