--- a/pages/tools-back.html
+++ b/pages/tools-back.html
@@ -162,6 +162,18 @@ var _hmt = _hmt || [];
 <p><a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >Rpi 4B</a>  <a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >Lite</a>  <a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >With Docker</a></p>
 
 	
+	<!--只有字的ad-->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+	
 	
 	<h3>VPN</h3>
 	  <p> </p>
