--- a/pages/tools.html
+++ b/pages/tools.html
@@ -75,7 +75,7 @@ var _hmt = _hmt || [];
 </script>
 		<br>
 		<br>
-		<center><p> ⬇️⬇️⬇️</p>  </center>
+		<center>⬇️⬇️⬇️</center>
 	<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >🔑Enter Password</a></em></strong> </center>
 		<p> </p>  
 		<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >点击下载</a></em></strong> </center>
