--- a/ad.html
+++ b/ad.html
@@ -73,6 +73,9 @@ var _hmt = _hmt || [];
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
    
+	
+	<center><img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210413185333.svg"/> </center> 
+	
 	</br>  
 	    <center> <strong><em>Here is the advertising sponsorship page，
         You can click on it and so I will have some income.</em></strong> </center>   
