--- a/ad.html
+++ b/ad.html
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
 </script>
    
 	
-	<center><img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210413185333.svg"/> </center> 
+	<center><img width="55%"src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210413185333.svg"/> </center> 
 	
 	</br>  
 	    <center> <strong><em>Here is the advertising sponsorship page，
