--- a/pages/film.html
+++ b/pages/film.html
@@ -62,12 +62,12 @@ var _hmt = _hmt || [];
           <br>
 <!--文章主体-->	
 
-	   <center>
-         <a href="/pages/filmpage/film-01roll.html"> <img src="<img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210413192338.svg"/>"  />
+	  <center>
+         <a href="/pages/filmpage/film-01roll.html"> <img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210413192338.svg" />
           </a>
 		 
 		 
-          </center>     
+          </center>  
 	      
 	      
       <center>
