--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -85,6 +85,7 @@ var _hmt = _hmt || [];
 <h3>Research software</h3>
 	<p> </p>
 <p><a href='https://sourl.cn/dN7Dd7' target="_blank" >Xmind ZEN</a> </p>
+<p><a href='https://sourl.cn/7vhTTb' target="_blank" >Microsoft Visio 2019 Win</a></p>
 <p><a href='https://sourl.cn/NVNP6T' target="_blank" >Deepl-translator</a> </p>
 <p><a href='https://sourl.cn/574Kzh' target="_blank" >MEGA X</a> </p>
 <p><a href='https://sourl.cn/URF5kx' target="_blank" >PDF-XChange-Editor9.0.3</a> </p>
@@ -112,7 +113,8 @@ var _hmt = _hmt || [];
 <p>Adobe Illustrator 2020 SP <a href='https://sourl.cn/U8C4pW'>Win</a> <a href='https://onedrive.gimhoy.com/sharepoint/aHR0cHM6Ly91c3RzLW15LnNoYXJlcG9pbnQuY24vOnU6L2cvcGVyc29uYWwvMjY0M191c3RzX2VkdV9jbi9FWktFTENJWFE3RkduUllKVURvaHgyTUJhOTVtbFNNRUFHUzZlNDhMYTVGOTVBP2U9RlVKUXlW.zip' target="_blank" >Mac</a> </p>
 <p>Adobe Premiere 2021 SP <a href='https://sourl.cn/i8VDKw'target="_blank" >Win</a> <a href='/tools'>Mac</a> </p>
 <p>Pixelmator Pro 1.7 <a href='https://sourl.cn/47FvVm' target="_blank" >Mac</a> </p>
-<p>PDF Expert <a href='https://sourl.cn/5qafE4' target="_blank" >Mac</a> </p>	
+<p>PDF Expert <a href='https://sourl.cn/5qafE4' target="_blank" >Mac</a> </p>
+<p><a href='https://sourl.cn/J8WyYV' target="_blank" >AutoCAD 2022</a></p>
 <p><a href='https://rickywang.lanzous.com/ibrb79a' target="_blank" >amtemu.v0.9.2-painter</a></p>
 	
 <h3>OpenWRT</h3>
