--- a/pages/tools-back.html
+++ b/pages/tools-back.html
@@ -99,6 +99,7 @@ var _hmt = _hmt || [];
 <h3>Research software</h3>
 	<p> </p>
 <p><a href='https://sourl.cn/dN7Dd7' target="_blank" >Xmind ZEN</a> </p>
+<p><a href='https://sourl.cn/7vhTTb' target="_blank" >Microsoft Visio 2019 Win</a></p>
 <p><a href='https://sourl.cn/NVNP6T' target="_blank" >Deepl-translator</a> </p>
 <p><a href='https://sourl.cn/574Kzh' target="_blank" >MEGA X</a> </p>
 <p><a href='https://sourl.cn/URF5kx' target="_blank" >PDF-XChange-Editor9.0.3</a> </p>
@@ -143,6 +144,8 @@ var _hmt = _hmt || [];
 <p>Pixelmator Pro 1.7 <a href='https://sourl.cn/47FvVm' target="_blank" >Mac</a> </p>
 <p>PDF Expert <a href='https://thoughts.teambition.com/share/60508028b9c75100460c1610' target="_blank" >Mac</a> </p>	
 <p><a href='https://rickywang.lanzous.com/ibrb79a' target="_blank" >amtemu.v0.9.2-painter</a></p>
+<p><a href='https://sourl.cn/J8WyYV' target="_blank" >AutoCAD 2022</a></p>
+	
 <!--只有字的ad-->
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
