--- a/pages/tools.html
+++ b/pages/tools.html
@@ -78,7 +78,7 @@ var _hmt = _hmt || [];
 		<center>⬇️⬇️⬇️</center>
 	<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >🔑Enter Password</a></em></strong> </center>
 		<p> </p>  
-		<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >点击下载</a></em></strong> </center>
+		<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >点击下载👈</a></em></strong> </center>
                 <br>
 		<br>
 		<center> <strong><em>Follow the WeChat public account ‘is-wzja’ and reply ‘pwd’ to get the password.</em></strong> </center>
@@ -96,7 +96,7 @@ var _hmt = _hmt || [];
 </script>
 
 		<br>
-	<center> <strong><em>📥Tools Download ：<a href='/pages/tools-back.html'   target="_blank"  >👋click me </a></em></strong> </center>
+	<center> <strong><em>📥Tools Download ：<a href='/pages/tools-back.html'   target="_blank"  >click me👈👈 </a></em></strong> </center>
 
 	<!--只有字的ad-->
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -114,7 +114,7 @@ var _hmt = _hmt || [];
 		
 	<br>
 		<br>
-	<center> <p><em><a href='/pages/tools-back.html'   target="_blank"  >🆓</a></em></p> </center>
+	<center> <p><em><a href='/pages/toolss.html'   target="_blank"  >🆓</a></em></p> </center>
 	
       </article>
     </main>
