--- a/pages/tools.html
+++ b/pages/tools.html
@@ -114,7 +114,7 @@ var _hmt = _hmt || [];
 		
 	<br>
 		<br>
-	<center> <p><a href='/pages/toolss.html'   target="_blank"  >🆓</a></p> </center>
+	<center> <a href='/pages/toolss.html'   target="_blank"  >❤️❤️❤️</a></center>
 	
       </article>
     </main>
