Update and rename kt to kt.html

--- a/kt.html
+++ b/kt.html
@@ -135,7 +135,7 @@ var _hmt = _hmt || [];
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
  <!-- Gd-ad-text -->
- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>https://github.com/biowr/biowr.github.io/blob/master/kt
  <ins class="adsbygoogle"
       style="display:block"
       data-ad-format="fluid"
