--- a/pages/movie/love-letter.html
+++ b/pages/movie/love-letter.html
@@ -74,8 +74,7 @@ var _hmt = _hmt || [];
 </script>
    
 <center>  
-<width="95%" img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210520141642.jpg"/>
-
+<img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210520141642.jpg" width="95"/>	
 </center>   
 
 <center>       
