--- a/pages/movie/love-letter.html
+++ b/pages/movie/love-letter.html
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
 </script>
    
 <center>  
-<img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210520141642.jpg" width="95"/>	
+<img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210520141642.jpg" width="95%"/>	
 </center>   
 
 <center>       
