--- a/pages/movie/love-letter.html
+++ b/pages/movie/love-letter.html
@@ -69,7 +69,7 @@ var _hmt = _hmt || [];
 
 <center>       
      <video width="95%" poster="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210520142626.jpg" controls="controls">
-       <source src="https://link.jscdn.cn/sharepoint/aHR0cHM6Ly91c3RzLW15LnNoYXJlcG9pbnQuY24vOnY6L2cvcGVyc29uYWwvMjY0M191c3RzX2VkdV9jbi9FWVowV3dTWlUzVk11aVQ4VXJiSGpCZ0JBdXJfdjIwd3dZOTlyNk9ZQl9fcHFRP2U9b3RIaWZt.mp4" type="video/mp4" />
+       <source src="https://sourl.cn/Fikk4A" type="video/mp4" />
        </object>
      </video>
             </center>   
@@ -82,7 +82,7 @@ var _hmt = _hmt || [];
      <p>类型: 剧情 / 爱情</p>
      <p>制片国家/地区: 日本</p>
      <p>语言: 日语</p>
-     <p>上映日期: 1999-03(中国大陆) / 2021-05-20(中国大陆重映) / 1995-03-25(日本)</p>
+     <p>上映日期:2021-05-20(中国大陆重映) / 1995-03-25(日本)</p>
      <p>片长: 117分钟</p>
      <p>又名: When I Close My Eyes / Letters of Love</p>
      <p>IMDb: tt0113703  </p>
