--- a/README.html
+++ b/README.html
@@ -6,7 +6,7 @@
   
     <meta property="og:title" content="README">
     <meta property="og:type" content="article">
-    <meta property="og:site_name" content="The Art Gallery Guardian">
+    <meta property="og:site_name" content="READ ME">
     <meta property="article:tag" content="">
     <title>README</title>
 
