--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -86,7 +86,7 @@ var _hmt = _hmt || [];
  
             <br>
 	</br>  
-	    <center> <strong><em>Favorite Movie</em></strong> </center>   
+	    <center> <strong><em>Favorite Movie List</em></strong> </center>   
             <br>
 	</br>  
 
@@ -100,6 +100,8 @@ var _hmt = _hmt || [];
 		<td><a href="https://sourl.cn/Fikk4A"><cite>Love Letter (1995)</cite></a></td>
 		 <br>
                 <td><a href="https://sourl.cn/3GJWtf"><cite>Edward Scissorhands (1990) </cite></a></td>
+		 <br>       
+		<td><a href="/pages/24fps-1.html"><cite>The Perks of Being a Wallflower (2012) </cite></a></td>
 		
 		</center>   
           
