--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -93,15 +93,15 @@ var _hmt = _hmt || [];
 	
 	
 	       <center> 
-		<td><a href="https://sourl.cn/6gPYfQ"><cite>The Truman Show (1998)</cite></a></td>
+		<td><a href="https://sourl.cn/6gPYfQ" target="_blank" ><cite>The Truman Show (1998)</cite></a></td>
 		 <br>
-                <td><a href="https://sourl.cn/3GJWtf"><cite>Edward Scissorhands (1990) </cite></a></td>
+                <td><a href="https://sourl.cn/3GJWtf" target="_blank" ><cite>Edward Scissorhands (1990) </cite></a></td>
 		 <br>
-		<td><a href="https://sourl.cn/Fikk4A"><cite>Love Letter (1995)</cite></a></td>
+		<td><a href="https://sourl.cn/Fikk4A" target="_blank" ><cite>Love Letter (1995)</cite></a></td>
 		 <br>
-                <td><a href="https://sourl.cn/3GJWtf"><cite>Edward Scissorhands (1990) </cite></a></td>
+                <td><a href="https://sourl.cn/3GJWtf" target="_blank" ><cite>Edward Scissorhands (1990) </cite></a></td>
 		 <br>       
-		<td><a href="/pages/24fps-1.html"><cite>The Perks of Being a Wallflower (2012) </cite></a></td>
+		<td><a href="/pages/24fps-1.html" target="_blank" ><cite>The Perks of Being a Wallflower (2012) </cite></a></td>
 		
 		</center>   
           
