--- a/pages/notebook.html
+++ b/pages/notebook.html
@@ -58,7 +58,7 @@ var _hmt = _hmt || [];
     </nav>
     <main>
       <article>
-        <h1 id="article-title">📖NOTEBOOK</h1>
+        <h1 id="article-title">📖NoteBook</h1>
         <table class="postindex">
 <tbody>
 
