--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -86,7 +86,7 @@ var _hmt = _hmt || [];
  
             <br>
 	</br>  
-	    <center> <strong><em>Favorite Movie List</em></strong> </center>   
+	    <center> <strong>  <em><a href="/pages/movie/list.html" target="_blank">Favorite Movie List</a></em> </strong> </center>  
             <br>
 	</br>  
 
