--- a/pages/movie/list.html
+++ b/pages/movie/list.html
@@ -19,6 +19,7 @@ var _hmt = _hmt || [];
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Favorite Movie List">
+    <meta name="referrer" content="never">
     <meta name="author" content="Rui Wang">
     <meta property="og:title" content="Posts">
     <meta property="og:type" content="article">
