--- a/index.html
+++ b/index.html
@@ -698,5 +698,13 @@ problems in hypergraphs of small rank.</li>
     </div>
   </div>
 </div>
+	    
+  
+   <footer class="hide-on-print">© 2016 - <time><script>document.write(new Date().getFullYear())</script></time> <a href="/" rel="author">Rui Wang</a>.
+    <a href="/README.html">Blog README</a>.</footer>
+	
+	
 </body>
+
+
 </html>
