--- a/index.html
+++ b/index.html
@@ -697,12 +697,13 @@ problems in hypergraphs of small rank.</li>
         <aside class="dedication">Co-advised by <a href="http://karthik.ise.illinois.edu/">Karthik Chandrasekaran</a> and <a href="http://chekuri.cs.illinois.edu/">Chandra Chekuri</a>.</aside>
     </div>
   </div>
+	
+	
+   <footer class="hide-on-print">
+    <a href="https://beian.miit.gov.cn"> 苏ICP备11028812号</a></footer>
+	
 </div>
 	    
-  
-   <footer class="hide-on-print">© 2016 - <time><script>document.write(new Date().getFullYear())</script></time> <a href="/" rel="author">Rui Wang</a>.
-    <a href="/README.html">Blog README</a>.</footer>
-	
 	
 </body>
 
