--- a/index.html
+++ b/index.html
@@ -699,8 +699,9 @@ problems in hypergraphs of small rank.</li>
   </div>
 	
 	
-   <footer class="hide-on-print">
-    <a href="https://beian.miit.gov.cn"> 苏ICP备11028812号</a></footer>
+   <footer class="hide-on-print"> <center> <a href="https://beian.miit.gov.cn"> 苏ICP备XXXXXX号</a> </center>
+	
+	</footer>
 	
 </div>
 	    
