--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@ problems in hypergraphs of small rank.</li>
 	
 <div class="cv-non-selected row pubtypeheader"><span>Manuscripts<br /><span style="font-size:0.6em"><em>Some manuscripts are available upon request.</em></span></span></div>
 	
-	<!-- A near-linear time algorithm for computing the optimal landing times of a fixed sequence of planes  -->
-  <div class="cv-non-selected row cv-entry" id="airplane">
+	<!--A ferroptosis-related gene signature identified as a novel prognostic biomarker for colon cancer  -->
+  <div class="cv-selected row cv-entry" id="airplane">
     <input type="checkbox" class="abstract-guard" id="airplane-toggle">
     <div class="cv-left">
         <i class="material-icons disabled">expand_more</i>
@@ -328,12 +328,12 @@ problems in hypergraphs of small rank.</li>
         <i class="material-icons disabled">airplay</i>
     </div>
     <div class="cv-right">
-      <cite class="paper-title">A near-linear time algorithm for computing the optimal landing times of a fixed sequence of planes</cite>
+      <cite class="paper-title">A ferroptosis-related gene signature identified as a novel prognostic biomarker for colon cancer</cite>
       <ul class="coauthor-list">
         <li>
-            <a href="https://scholar.google.com/citations?user=4DRkxEoAAAAJ&hl=en">Bin Cao</a></li></ul>
+            <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm">Xin Qi</a></li></ul>
       <p><em>
-        <time>2019</time>, Submitted.
+        <time>2021</time>, Submitted.
       </em><p>
     </div>
   </div>
