--- a/index.html
+++ b/index.html
@@ -38,31 +38,11 @@
       if (mathElements[i].tagName == "SPAN") { katex.render(texText.data, mathElements[i], { displayMode: mathElements[i].classList.contains("display"), throwOnError: false, macros:macros} );
     }}});
   </script>
-
-<!-- Matomo -->
-<script type="text/javascript">
-  var _paq = window._paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="https://ruiprime.matomo.cloud/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '1']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.src='//cdn.matomo.cloud/ruiprime.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<!-- End Matomo Code -->
-
-	
 	
 <!-- Cloudflare Web Analytics -->
 <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e413e3537a7748d48eceeb5dd9a2405f", "spa": true}'></script>
 <!-- End Cloudflare Web Analytics -->	
-	
-
-	
+		
 	
  <!-- 百度统计 -->
 <script>
@@ -218,8 +198,8 @@ We utilize vertex ordering based ideas to obtain our results. Unlike graphs we o
 	
 	
  
-  <!-- High multiplicity asymmetric traveling salesman problem with feedback vertex set and its application to storage/retrieval system  -->
-  <div class="cv-non-selected row cv-entry" id="kdepots">
+  <!-- A ferroptosis-related gene signature identified as a novel prognostic biomarker for colon cancer -->
+  <div class="cv-selected row cv-entry" id="kdepots">
     <input type="checkbox" class="abstract-guard" id="kdepots-toggle">
     <div class="cv-left">
         <label class="showmore material-icons" for="kdepots-toggle"></label>
@@ -227,18 +207,24 @@ We utilize vertex ordering based ideas to obtain our results. Unlike graphs we o
         <a href="files/presentations/kdepots.pdf"><i class="material-icons">airplay</i></a>
     </div>
     <div class="cv-right">
-      <cite class="paper-title">High multiplicity asymmetric traveling salesman problem with feedback vertex set and its application to storage/retrieval system</cite>
+      <cite class="paper-title">A ferroptosis-related gene signature identified as a novel prognostic biomarker for colon cancer</cite>
       <ul class="coauthor-list">
         <li>
-            <a href="https://www.csun.edu/som/amir-gharehgozli">Amir Gharehgozli</a></li><li>
-            <a href="https://www.linkedin.com/in/wenda-zhang-a5359a36/">Wenda Zhang</a></li></ul>
+            <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm">Xin Qi</a></li></ul>
       <p><em>
-          European Journal of Operational Research <time>2020</time>.
+          Frontiers in Genetics <time>2021</time>.
       </em><p>
     </div>
     <div class="abstract">
-      <p>We describe an algorithm for the high multiplicity asymmetric traveling salesman problem with feedback vertex set of size <span class="math">k</span> (HMTSPFVS-<span class="math">k</span>FVS) where each vertex can be visited a certain number of times and each cycle in a solution contains at least one vertex from the feedback vertex set. We show how it can be used to improve algorithms in automated storage and retrieval systems. An automated storage and retrieval system includes storage blocks and storage and retrieval machines that either move to retrieve unit loads from their current locations in the system to a depot or take unit loads from a depot and store them to specific locations in the system. Given <span class="math">n</span> storage and retrieval requests in a system with <span class="math">k</span> depots and one storage and retrieval machine, we show that our algorithm for HMTSPFVS-<span class="math">k</span>FVS can solve the problem of minimizing total traveling time of the storage and retrieval machine in <span class="math">O(n^k+n^3)</span> time when all depots are specialized (each depot fulfills one type of requests) and in <span class="math">O(n^{2k}+n^3)</span> time when depots are regular (each depot fulfills both types of requests). The best previous algorithm only solves the special case of the problem with <span class="math">2</span> regular depots in <span class="math">O(n^6)</span> time. The applicability of our algorithm for several generalizations and special cases of the problem is also discussed. Furthermore, to evaluate the performance of our solution method, we perform extensive numerical experiments.</p>
-    </div>
+	    <p>Background: Colon cancer (CC) is a common gastrointestinal malignant tumor with high heterogeneity in clinical behavior and response to treatment, making individualized survival prediction challenging. Ferroptosis is a newly discovered iron-dependent cell death that plays a critical role in cancer biology. Therefore, identifying a prognostic biomarker with ferroptosis-related genes provides a new strategy to guide precise clinical decision-making in CC patients.
+
+Methods: Alteration in the expression profile of ferroptosis-related genes was initially screened in GSE39582 dataset involving 585 CC patients. Univariate Cox regression analysis and LASSO-penalized Cox regression analysis were combined to further identify a novel ferroptosis-related gene signature for overall survival prediction. The prognostic performance of the signature was validated in the GSE17536 dataset by Kaplan-Meier survival curve and time-dependent ROC curve analyses. Functional annotation of the signature was explored by integrating GO and KEGG enrichment analysis, GSEA analysis and ssGSEA analysis. Furthermore, an outcome risk nomogram was constructed considering both the gene signature and the clinicopathological features.
+
+Results: The prognostic signature biomarker composed of 9 ferroptosis-related genes accurately discriminated high-risk and low-risk patients with CC in both the training and validation datasets. The signature was tightly linked to clinicopathological features and possessed powerful predictive ability for distinct clinical subgroups. Furthermore, the risk score was confirmed to be an independent prognostic factor for CC patients by multivariate Cox regression analysis ( p value < 0.05). Functional annotation analyses showed that the prognostic signature was closely correlated with pivotal cancer hallmarks, particularly cell cycle, transcriptional regulation, and immune-related functions. Moreover, a nomogram with the signature was also built to quantify outcome risk for each patient.
+
+Conclusion: The novel ferroptosis-related gene signature biomarker can be utilized for predicting individualized prognosis, optimizing survival risk assessment and facilitating personalized management of CC patients. </p>
+	  
+	  </div>
   </div>
   <!-- LP Relaxation and Tree Packing for Minimum <span class="math">k</span>-Cut  -->
   <div class="cv-selected row cv-entry" id="kcut-revisited-journal">
