--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ problems in hypergraphs of small rank.</li>
 	</footer>
 	
 </div>
-	    
+	    <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1279968361&web_id=1279968361"></script>
 	
 </body>
 
