--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -63,7 +63,17 @@ var _hmt = _hmt || [];
         <h1 id="article-title">🔧 Tools</h1>
         <br>
 <div>
-    
+     <!-- 样式更改 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hr-7+2n-1d-69"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>   
     
     <h3>Common software</h3>
 	
@@ -137,7 +147,17 @@ var _hmt = _hmt || [];
 <p> </p>  
 	
 	
-	
+	    <!-- 样式更改 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hr-7+2n-1d-69"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	
       </article>
     </main>
